--- a/gb/17/8/14/n9528391.md
+++ b/gb/17/8/14/n9528391.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uljqjd308/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/uljqjd308/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/uljqjd308/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/uljqjd308/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/uljqjd308/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/uljqjd308/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/uljqjd308/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/uljqjd308/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/uljqjd308/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/uljqjd308/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uljqjd308/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uljqjd308/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uljqjd308/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uljqjd308/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uljqjd308/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>牙齿撞落勿丢弃 医师帮您“救活”它?</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/12/fef0b3e79449dee1d8120910207c93a3-600x400.jpg" />
 <h6>纽约布鲁克林口腔科医师凌洁。（张学慧／大纪元）
 </h6>
 <hr>
 	<p>好端端的牙齿被撞落？想想就心疼得慌。小到几岁的淘气幼儿，大到青春期好动的男孩子，他们生活中有太多磕碰的机会，一个不小心将门牙击落，这样的事时有发生。 但大多数人以为牙齿磕掉就磕掉了，只能自认倒霉。</p>
-<p>纽约<ahref="https://github.com/uljqjd308/djy/blob/master/gb/tag/%E5%B8%83%E9%B2%81%E5%85%8B%E6%9E%97%E7%89%99%E5%8C%BB.md#1">布鲁克林牙医</a>凌洁提醒，牙齿掉了不要丢弃，如果能够保护好掉牙，尽快就医，医生帮您把牙齿植回原位，或许能够挽回损失。凌医师说：“天然牙齿是最好的，能保留就尽量给病人保留。”</p>
+<p>纽约<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B8%83%E9%B2%81%E5%85%8B%E6%9E%97%E7%89%99%E5%8C%BB.md#1">布鲁克林牙医</a>凌洁提醒，牙齿掉了不要丢弃，如果能够保护好掉牙，尽快就医，医生帮您把牙齿植回原位，或许能够挽回损失。凌医师说：“天然牙齿是最好的，能保留就尽量给病人保留。”</p>
 <p>从牙齿掉落到就医的时间间隔越短越好，以两个小时之内为宜。那么就医前应该怎样保护好掉牙呢？</p>
 <p>首先应该保持牙齿湿润，因为牙根周围有一层牙周组织，湿润的环境可以保持其活力。凌医师介绍，有条件的可以把牙齿保存在生理盐水中，如果没有生理盐水，也可以用清水或牛奶，或者将牙齿含在口中舌头下面，尽快就医。另外，手拿牙齿时要拿牙冠部分，而不要拿牙根部分，不要用纸巾或纱布撮捏牙齿，也不要用牙刷刷洗牙齿，避免破坏牙周组织。</p>
 <p>到医院或诊所后，医生会给掉落的牙齿做专业清洁后放回原位，并与两侧的健康牙齿固定在一起，待牙齿逐渐与牙槽骨相容，并再次恢复功用。</p>
@@ -24,41 +24,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/3/8/1/n352156.md#1">美研究发现:牙齿脱落可能同心脏病有关</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/6/11/29/n1538200.md#1">把握断牙黄金1小时 免做无“齿”之徒</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/7/4/20/n1685270.md#1">牙齿脱落性外伤</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/16/11/14/n8490688.md#1">植牙前须知！植牙是怎么做的？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/3/8/1/n352156.md#1">美研究发现:牙齿脱落可能同心脏病有关</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/6/11/29/n1538200.md#1">把握断牙黄金1小时 免做无“齿”之徒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/20/n1685270.md#1">牙齿脱落性外伤</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/14/n8490688.md#1">植牙前须知！植牙是怎么做的？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11208751.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(4)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10993844.md#1" target="_blank">阅读《转法轮》 大洋洲法轮功学员谈感悟</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139001.md#1" target="_blank">高诵芬、徐家祯：抄家</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10713843.md#1" target="_blank">德国绿嫩市政府官方网页推荐法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/12/n13083124.md#1">对于邪灵“附体” 东西方文化如何对待？</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/15/n13091973.md#1">【未解之谜】 另类转世 亡夫化鸟续前缘</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/21/n13105553.md#1">新世纪影视诗朗诵《二十二载的讴歌》</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/22/n13108142.md#1">【未解之谜】再生人画图为证 推特寻亲</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/23/n13110980.md#1">【新闻看点】郑州多地塌方严重 农村伤亡不让报</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/23/n13110904.md#1">【远见快评】郑州惨剧不断 祸起书记一句话？</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/22/n13106400.md#1">视频：郑州洪水后一片狼籍 尸体横卧街头</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/21/n13105480.md#1">郑州男惊险救妻 地铁五号线仍多人失联</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/22/n13107463.md#1">【一线采访】郑州京广隧道汽车堆积 惨不忍睹</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/21/n13105460.md#1">57岁刘青云近照曝光 粉丝惊呼认不出</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/22/n13108292.md#1">刘德华拍片慰问河南灾民 竟遭网民逼问捐款没</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/22/n13107732.md#1">星光二班女星喜诞女娃 为宝宝取苏格兰名</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/22/n13108051.md#1">河南洪灾魔咒？成龙党庆高唱《怒吼吧黄河》</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/21/n13105251.md#1">吴尊用三年打造新家 依华人传统庆乔迁之喜</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/10/n13080358.md#1">哈佛推荐的10大超级食物 好处不只是抗癌</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/22/n13106221.md#1">大脚怪抱孩子渡河？ 美国男子拍到奇特画面</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/22/n13108194.md#1">三高者易得肾脏病？营养师教你护肾饮食法</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/23/n13109007.md#1">高速弹射升空 美国少女玩游乐设施被海鸥撞到</a></li>
-<li><a href="https://github.com/uljqjd308/djy/blob/master/gb/21/7/23/n13109356.md#1">应对干旱 美国农民请“水巫”用古法找水源</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689765.md#1">【远见快评】傅政华双开通报 3大谜团全解析</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">【唐瑞讲故事】朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uljqjd308/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uljqjd308/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/14/n9528391.htm">牙齿撞落勿丢弃 医师帮您“救活”它?</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/14/n9528391.htm">牙齿撞落勿丢弃 医师帮您“救活”它?</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uljqjd308/djy/blob/master/gb/17/8/14/n9528391.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uljqjd308/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uljqjd308/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uljqjd308/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uljqjd308/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uljqjd308/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/8/14/n9528391.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
